--- a/themes/home/css/main.css
+++ b/themes/home/css/main.css
@@ -52,8 +52,8 @@ input,textarea{
 }
 
 .navbar-brand img{
-  width: 20px;
-  height: 20px;
+  /*width: 20px;
+  height: 20px;*/
 }
 
 textarea{
@@ -93,10 +93,10 @@ body > .container {
 
 /*logo图样式*/
 .navbar-brand {
-    width: 143px;
-    height: 50px;
+    /*width: 143px;
+    height: 50px;*/
     padding: 6px;
-    background: url("/assets/img/dc-logo.png") no-repeat center center;
+    /*background: url("/assets/img/dc-logo.png") no-repeat center center;*/
 }
 
 /*菜单相关*/
